fix: findbar header spacing

--- a/findbar-ai/style.css
+++ b/findbar-ai/style.css
@@ -15,7 +15,6 @@ browser {
   will-change: transform;
 }
 
-
 @keyframes initial-animation {
   from {
     top: 0;
@@ -113,7 +112,9 @@ browser {
       outline: none !important;
 
       &:hover {
-        background-color: color-mix(in srgb, var(--zen-primary-color) 80%, black 20%) !important;
+        background-color: color-mix(in srgb,
+            var(--zen-primary-color) 80%,
+            black 20%) !important;
       }
 
       &:active {
@@ -181,7 +182,7 @@ browser {
       background-color: transparent !important;
       -moz-context-properties: fill !important;
       fill: light-dark(black, white) !important;
-      /*       border: 1px solid red !important; */
+      /* border: 1px solid red !important; */
 
       label {
         display: none !important;
@@ -250,7 +251,6 @@ browser {
         position: relative;
 
         &::before {
-          /* AI Icon */
           content: "";
           width: 18px !important;
           min-width: 18px !important;
@@ -371,7 +371,8 @@ browser {
       display: flex;
       flex-direction: row;
       align-items: center !important;
-      gap: 10px !important;
+      gap: 4px !important;
+      padding-left: 8px !important;
 
       #model-selector {
         color: var(--tab-selected-textcolor) !important;
@@ -643,7 +644,9 @@ browser {
       margin: 1px 3px;
       vertical-align: middle;
       padding: 0.3px !important;
-      background: color-mix(in srgb, var(--zen-primary-color) 40%, transparent 60%) !important;
+      background: color-mix(in srgb,
+          var(--zen-primary-color) 40%,
+          transparent 60%) !important;
     }
 
     #findbar-expand {
@@ -743,6 +746,7 @@ browser {
           position: absolute !important;
           right: 10px !important;
           transition: all 0.2s ease !important;
+          /* border: 1px red solid !important; */
         }
 
         &::before {
@@ -760,37 +764,21 @@ browser {
         .settings-btn {
           right: 86px !important;
         }
-
-        &:hover {
-
-          .clear-chat-btn,
-          .settings-btn {
-            opacity: 1 !important;
-          }
-
-          &::after {
-            opacity: 1 !important;
-          }
-        }
       }
 
+      &:has(.findbar-closebutton:hover),
       &:has(.ai-chat-header:hover) {
-        .findbar-closebutton {
+        .ai-chat-header::after {
           opacity: 1 !important;
         }
-      }
 
-      &:has(.findbar-closebutton:hover) {
-        .ai-chat-header {
+        .clear-chat-btn,
+        .settings-btn {
+          opacity: 1 !important;
+        }
 
-          .clear-chat-btn,
-          .settings-btn {
-            opacity: 1 !important;
-          }
-
-          &::after {
-            opacity: 1 !important;
-          }
+        .findbar-closebutton {
+          opacity: 1 !important;
         }
       }
 
@@ -812,11 +800,10 @@ browser {
       }
 
       &:has(.ai-chat-messages:not(:empty)) {
-        .findbar-container>:first-child::before {
+        .findbar-container> :first-child::before {
           background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23fff" d="M9.107 5.448c.598-1.75 3.016-1.803 3.725-.159l.06.16l.807 2.36a4 4 0 0 0 2.276 2.411l.217.081l2.36.806c1.75.598 1.803 3.016.16 3.725l-.16.06l-2.36.807a4 4 0 0 0-2.412 2.276l-.081.216l-.806 2.361c-.598 1.75-3.016 1.803-3.724.16l-.062-.16l-.806-2.36a4 4 0 0 0-2.276-2.412l-.216-.081l-2.36-.806c-1.751-.598-1.804-3.016-.16-3.724l.16-.062l2.36-.806A4 4 0 0 0 8.22 8.025l.081-.216zM11 6.094l-.806 2.36a6 6 0 0 1-3.49 3.649l-.25.091l-2.36.806l2.36.806a6 6 0 0 1 3.649 3.49l.091.25l.806 2.36l.806-2.36a6 6 0 0 1 3.49-3.649l.25-.09l2.36-.807l-2.36-.806a6 6 0 0 1-3.649-3.49l-.09-.25zM19 2a1 1 0 0 1 .898.56l.048.117l.35 1.026l1.027.35a1 1 0 0 1 .118 1.845l-.118.048l-1.026.35l-.35 1.027a1 1 0 0 1-1.845.117l-.048-.117l-.35-1.026l-1.027-.35a1 1 0 0 1-.118-1.845l.118-.048l1.026-.35l.35-1.027A1 1 0 0 1 19 2" /></svg>') !important;
         }
       }
-
     }
   }
 
@@ -863,7 +850,7 @@ browser {
         font-size: 18px !important;
         font-weight: 700 !important;
       }
-      
+
       div {
         display: flex;
         gap: 10px;
